# watchlist.db

./: .env.example  .gitignore  BRIEF.md  CLAUDE.md  Dockerfile  README.md  config.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  scheduler.py  scraper.py  tmdb.py
docs/plans/: 2026-02-25-streaming-service-toggles-design.md  2026-02-25-streaming-service-toggles-plan.md  2026-02-25-watchlist-db-v1.md  2026-02-26-services-dialog-redesign-design.md
static/: style.css
templates/: index.html
tests/: conftest.py  test_config.py  test_database.py  test_models.py  test_routes.py  test_scheduler.py  test_scraper.py  test_tmdb.py
